default/objects/NVMContactWorld__CaseRoutingRequest__c/NVMContactWorld__CaseRoutingRequest__c.object-meta.xml
<CustomObject>
    <label>CaseRoutingRequest</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CaseRoutingRequest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseRoutingRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>