default/objects/NVMContactWorld__CaseRoutingRequest__c/fields/NVMContactWorld__Action__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>