default/objects/NVMContactWorld__CaseRoutingRequest__c/fields/NVMContactWorld__Case__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>CaseRequestPromises</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>