default/objects/NVMContactWorld__CaseRoutingRequest__c/fields/NVMContactWorld__Case_Status_to_set_on_Agent_release__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__Case_Status_to_set_on_Agent_release__c</fullName>
    <label>Case Status to set on Agent release</label>
    <length>255</length>
    <type>Text</type>
</CustomField>