default/objects/NVMContactWorld__CaseRoutingRequest__c/fields/NVMContactWorld__PreviousAction__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__PreviousAction__c</fullName>
    <label>PreviousAction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>