default/objects/NVMContactWorld__CaseRoutingRequest__c/fields/NVMContactWorld__TryRouteToOwner__c.field-meta.xml
<CustomField>
    <fullName>NVMContactWorld__TryRouteToOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TryRouteToOwner</label>
    <type>Checkbox</type>
</CustomField>