default/objects/NVMContactWorld__CaseRoutingRequest__c/listViews/NVMContactWorld__All.listView-meta.xml
<ListView>
    <fullName>NVMContactWorld__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>